--- a/packages/ui-theme/icloud-theme/src/antd4-styles-patch.css
+++ b/packages/ui-theme/icloud-theme/src/antd4-styles-patch.css
@@ -1,4 +1,6 @@
 /* UE要求取消所有点击动画 */
+
+/* https://github.com/ant-design/ant-design/issues/951 */
 [ant-click-animating-without-extra-node="true"]::after,
 .ant-click-animating-node {
     animation: none !important;
