--- a/packages/ui/message/src/index.less
+++ b/packages/ui/message/src/index.less
@@ -7,6 +7,26 @@
         }
     }
 
+    .ant-alert-success {
+        background:var(--message-alert-success-bg-color);
+        border-color:var(--message-alert-success-border-color);
+    }
+
+    .ant-alert-warning {
+        background: var(--message-alert-warning-bg-color);
+        border-color:var(--message-alert-warning-border-color);
+    }
+
+    .ant-alert-error {
+        background: var(--message-alert-error-bg-color);
+        border-color:var(--message-alert-error-border-color);
+    }
+
+    .ant-alert-info {
+        background: var(--message-alert-info-bg-color);
+        border-color:var(--message-alert-info-border-color);
+    }
+
     &-infoIcon {
         color: var(--theme-info-color);
     }
