fix: modal title设置max-width

--- a/packages/ui/modal/src/index.less
+++ b/packages/ui/modal/src/index.less
@@ -25,6 +25,10 @@
         }
     }
 
+    .ant-modal-title {
+        max-width: 95%;
+    }
+
     // no-border
     &-no-border {
         .ant-modal-title {
