fix: button only-icon的情况下,设置display inline-flex

--- a/packages/ui/button/src/index.less
+++ b/packages/ui/button/src/index.less
@@ -147,4 +147,11 @@
             text-decoration: var(--btn-link-text-decoration);
         }
     }
+
+    // 只有icon的时候居中icon
+    &.ant-btn-only-icon {
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+    }
 }
