--- a/packages/ui/badge/src/index.less
+++ b/packages/ui/badge/src/index.less
@@ -1,23 +1,16 @@
 @osui-back-top-class-prefix: osui-badge;
 
 .@{osui-back-top-class-prefix} {
-    &-much {
-        width: 25px;
-
-        .ant-scroll-number-only .current {
-            margin-left: -5px;
-        }
+    .ant-badge-status-dot {
+        width: 8px;
+        height: 8px;
     }
 
-    &-super-much {
-        width: 34px;
-
-        .ant-scroll-number-only .current {
-            margin-left: -2px;
-        }
+    .ant-badge-status-processing {
+        background-color: var(--theme-primary-color);
     }
 
-    .ant-badge-dot {
-        background: var(--color-error-6);
+    .ant-badge-status-default {
+        background-color: var(--theme-disabled-color);
     }
 }
