fix: radio group focus不显示outline

--- a/packages/ui/radio/src/index.less
+++ b/packages/ui/radio/src/index.less
@@ -83,5 +83,9 @@
             background: var(--radio-button-disabled-bg);
             border-color: var(--radio-button-disabled-border-color);
         }
+
+        .ant-radio-button-wrapper-checked:not(.ant-radio-button-wrapper-disabled):focus-within {
+            box-shadow: none;
+        }
     }
 }
