--- a/packages/ui/switch/src/index.less
+++ b/packages/ui/switch/src/index.less
@@ -11,10 +11,10 @@
 
     &.ant-switch-disabled {
         opacity: 1;
-        background-color: var(--theme-disabled-bg);
+        background-color: var(--switch-disable-bg);
 
         .ant-switch-handle::before {
-            background-color: var(--theme-color-border-base);
+            background-color: var(--switch-handle-disable-bg);
             box-shadow: none;
         }
     }
@@ -32,5 +32,4 @@
     &.ant-switch:focus {
         box-shadow: var(--theme-component-focus-box-shadow);
     }
-
 }
