fix: tabs color 样式修复

--- a/packages/ui/tabs/src/index.less
+++ b/packages/ui/tabs/src/index.less
@@ -1,7 +1,9 @@
 @osui-tabs-class-prefix: osui-tabs;
 
 .@{osui-tabs-class-prefix} {
-    color: var(--tabs-tab-color);
+    &.ant-tabs {
+        color: var(--tabs-tab-color);
+    }
 
     &.ant-tabs-top > .ant-tabs-nav::before {
         border-bottom: var(--tabs-border-bottom);
