--- a/packages/ui-theme/icloud-theme/src/antd-vars-patch.less
+++ b/packages/ui-theme/icloud-theme/src/antd-vars-patch.less
@@ -80,6 +80,9 @@
 @table-header-bg: var(--table-header-bg);
 @table-header-color: var(--table-header-color);
 @table-padding-vertical: 9.5px; // UE要求行号40，行高= {padding-vertical} * 2 + {font-size} * 1.5
+@table-font-size: @font-size-sm;
+@table-font-size-sm: @font-size-sm;
+@table-font-size-md: @font-size-sm;
 
 // Menu
 // ---
