fix: drawer icloud 主题调整

--- a/packages/ui-theme/icloud-theme/src/antd-vars-patch.less
+++ b/packages/ui-theme/icloud-theme/src/antd-vars-patch.less
@@ -225,3 +225,10 @@
 // Tabs
 // ---
 @tabs-horizontal-margin: 0 40px 0 0;
+
+// Drawer
+// ---
+@drawer-header-padding: 20px;
+@drawer-body-padding: 20px;
+@drawer-footer-padding-vertical: 10px;
+@drawer-footer-padding-horizontal: 20px;
