fix: tag icloud 主题修复

--- a/packages/ui-theme/icloud-theme/src/antd-vars-patch.less
+++ b/packages/ui-theme/icloud-theme/src/antd-vars-patch.less
@@ -195,7 +195,7 @@
 // Tag
 @tag-default-bg: var(--tag-default-bg);
 @tag-default-color: @text-color;
-@tag-font-size: @font-size-base;
+@tag-font-size: @font-size-sm;
 @tag-line-height: 22px;
 
 // Pagination
