fix: timeline icloud 主题调整

--- a/packages/ui-theme/icloud-theme/src/antd-vars-patch.less
+++ b/packages/ui-theme/icloud-theme/src/antd-vars-patch.less
@@ -232,3 +232,7 @@
 @drawer-body-padding: 20px;
 @drawer-footer-padding-vertical: 10px;
 @drawer-footer-padding-horizontal: 20px;
+
+// Timeline
+// ---
+@timeline-width: 1px;
