fix: progress icloud主题调整

--- a/packages/ui-theme/icloud-theme/src/antd-vars-patch.less
+++ b/packages/ui-theme/icloud-theme/src/antd-vars-patch.less
@@ -236,3 +236,9 @@
 // Timeline
 // ---
 @timeline-width: 1px;
+
+// Progress
+// ---
+@progress-default-color:var(--theme-primary-color);
+@progress-text-color: var(--progress-text-color);
+@progress-radius: var(--progress-radius);
