--- a/packages/ui-theme/osui-theme/src/antd-vars-patch.less
+++ b/packages/ui-theme/osui-theme/src/antd-vars-patch.less
@@ -220,3 +220,9 @@
 // Tabs
 // ---
 @tabs-horizontal-margin: 0 32px 0 0;
+
+// Progress
+// ---
+@progress-default-color:var(--theme-primary-color);
+@progress-text-color: var(--progress-text-color);
+@progress-radius: var(--progress-radius);
