chore: reskript example update

--- a/examples/reskript/my-app/src/styles/app.global.less
+++ b/examples/reskript/my-app/src/styles/app.global.less
@@ -1,5 +1,4 @@
-@import '~@osui/icloud-theme/dist/theme/vars.css';
-@import '~@osui/icloud-theme/dist/antd4-styles-patch.css';
+@import "~@osui/icloud-theme/dist/theme/vars.css";
 
 * {
     box-sizing: border-box;
@@ -12,7 +11,7 @@ body {
 }
 
 a {
-    color: @primary-color;
+    color: var(--color-brand-6);
     text-decoration: none;
 
     &:hover {
