--- a/examples/reskript/my-app/src/components/Welcome/index.less
+++ b/examples/reskript/my-app/src/components/Welcome/index.less
@@ -6,6 +6,8 @@
         font-size: 3rem;
         font-weight: bold;
         margin: .5em 0;
+        display: flex;
+        align-items: center;
     }
 
     p {
@@ -31,4 +33,9 @@
         background-color: #eee;
         padding: 0 .5em;
     }
+}
+
+.greeting {
+    width: 48px;
+    height: 48px;
 }
