fix: slider, date-picker icloud样式调整

--- a/packages/ui-theme/icloud-theme/src/antd-vars-patch.less
+++ b/packages/ui-theme/icloud-theme/src/antd-vars-patch.less
@@ -239,6 +239,17 @@
 
 // Progress
 // ---
-@progress-default-color:var(--theme-primary-color);
+@progress-default-color: var(--theme-primary-color);
 @progress-text-color: var(--progress-text-color);
 @progress-radius: var(--progress-radius);
+
+// DatePicker
+@picker-basic-cell-active-with-range-color: var(--color-brand-1);
+
+// Slider
+// ---
+@slider-handle-border-width: 1px;
+@slider-trace-background-color: var(--theme-primary-color);
+@slider-trace-background-color-hover: var(--theme-primary-color-hover);
+@slider-rail-background-color: var(--color-brand-1);
+@slider-rail-background-color-hover: var(--color-brand-1);
