fix: cascader级联icloud样式调整

--- a/packages/ui-theme/icloud-theme/src/antd-vars-patch.less
+++ b/packages/ui-theme/icloud-theme/src/antd-vars-patch.less
@@ -253,3 +253,7 @@
 @slider-trace-background-color-hover: var(--theme-primary-color-hover);
 @slider-rail-background-color: var(--color-brand-1);
 @slider-rail-background-color-hover: var(--color-brand-1);
+
+// Cascader
+// ---
+@cascader-item-selected-bg: var(--color-brand-1);
