--- a/packages/ui-theme/icloud-theme/src/antd-vars-patch.less
+++ b/packages/ui-theme/icloud-theme/src/antd-vars-patch.less
@@ -257,3 +257,10 @@
 // Cascader
 // ---
 @cascader-item-selected-bg: var(--color-brand-1);
+
+// Steps
+// ---
+@steps-icon-margin: 0 10px 0 0;
+@steps-small-icon-margin: 0 10px 0 0;
+@steps-icon-font-size: @font-size-base;
+@steps-icon-size: 30px;
